test/corpus/invalid.txt
==================
Unquoted key
==================

{key: "value"}

---

(document
  (object
    (ERROR
      (UNEXPECTED 'k')
      (string
        (string_content)))))

==================
Unquoted string value
==================

{"a": hello}

---

(document
  (object
    (ERROR
      (string
        (string_content))
      (UNEXPECTED 'h'))))

==================
Single-quoted string
==================

{'k': 'v'}

---

(document
  (object
    (ERROR
      (UNEXPECTED ''')
      (UNEXPECTED '''))))

==================
Hex literal
==================

{"a": 0xFF}

---

(document
  (object
    (pair
      key: (string
        (string_content))
      value: (number))
    (ERROR
      (UNEXPECTED 'x'))))

==================
Infinity
==================

{"a": Infinity}

---

(document
  (object
    (ERROR
      (string
        (string_content))
      (UNEXPECTED 'I'))))

==================
NaN
==================

{"a": NaN}

---

(document
  (object
    (ERROR
      (string
        (string_content))
      (UNEXPECTED 'N'))))

==================
Numeric object key
==================

{1: "x"}

---

(document
  (object
    (ERROR
      (number)
      (string
        (string_content)))))
